fix(styles/ListView): Fixed badges alignment

--- a/page/src/styles/ListView.css
+++ b/page/src/styles/ListView.css
@@ -59,7 +59,7 @@
 }
 
 .event-list-entry > header > a {
-    flex: 1;
+    width: 15%;
     text-align: right;
     overflow: hidden;
     text-overflow: ellipsis;
